--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -190,7 +190,7 @@ services:
     ports:
       - "3301:3301"
     volumes:
-      - ../common/nginx-config.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx-config.conf:/etc/nginx/conf.d/default.conf
 
   otel-collector:
     image: signoz/signoz-otel-collector:${OTELCOL_TAG:-0.66.2}
@@ -199,6 +199,7 @@ services:
     volumes:
       - ./otel-collector-config.yaml:/etc/otel-collector-config.yaml
       - /var/lib/docker/containers:/var/lib/docker/containers:ro
+      - ./fake:/fake
     environment:
       - OTEL_RESOURCE_ATTRIBUTES=host.name=signoz-host,os.type=linux
       - DOCKER_MULTI_NODE_CLUSTER=false
@@ -230,28 +231,28 @@ services:
     restart: on-failure
     <<: *clickhouse-depend
 
-  hotrod:
-   image: jaegertracing/example-hotrod:1.30
-   container_name: hotrod
-   logging:
-     options:
-       max-size: 50m
-       max-file: "3"
-   command: ["all"]
-   environment:
-     - JAEGER_ENDPOINT=http://otel-collector:14268/api/traces
+  # hotrod:
+  #  image: jaegertracing/example-hotrod:1.30
+  #  container_name: hotrod
+  #  logging:
+  #    options:
+  #      max-size: 50m
+  #      max-file: "3"
+  #  command: ["all"]
+  #  environment:
+  #    - JAEGER_ENDPOINT=http://otel-collector:14268/api/traces
 
-  load-hotrod:
-    image: "grubykarol/locust:1.2.3-python3.9-alpine3.12"
-    container_name: load-hotrod
-    hostname: load-hotrod
-    environment:
-      ATTACKED_HOST: http://hotrod:8080
-      LOCUST_MODE: standalone
-      NO_PROXY: standalone
-      TASK_DELAY_FROM: 5
-      TASK_DELAY_TO: 30
-      QUIET_MODE: "${QUIET_MODE:-false}"
-      LOCUST_OPTS: "--headless -u 10 -r 1"
-    volumes:
-      - ../common/locust-scripts:/locust
+  # load-hotrod:
+  #   image: "grubykarol/locust:1.2.3-python3.9-alpine3.12"
+  #   container_name: load-hotrod
+  #   hostname: load-hotrod
+  #   environment:
+  #     ATTACKED_HOST: http://hotrod:8080
+  #     LOCUST_MODE: standalone
+  #     NO_PROXY: standalone
+  #     TASK_DELAY_FROM: 5
+  #     TASK_DELAY_TO: 30
+  #     QUIET_MODE: "${QUIET_MODE:-false}"
+  #     LOCUST_OPTS: "--headless -u 10 -r 1"
+  #   volumes:
+  #     - ./locust-scripts:/locust
